crates/daedalus/tests/ui/transport/fail_plugin_missing_id.stderr
error: missing plugin id
 --> tests/ui/transport/fail_plugin_missing_id.rs:3:1
  |
3 | #[plugin(nodes())]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `plugin` (in Nightly builds, run with -Z macro-backtrace for more info)
