crates/daedalus/tests/ui/transport/fail_plugin_missing_id.rs
use daedalus::plugin;

#[plugin(nodes())]
pub struct BadPlugin;

fn main() {}
